--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-lg-7 mb-4 mb-lg-0">
-                        <h1 class="mb-3">A space to think.</h1>
+                        <h1 class="mb-3">Coaching for inner clarity.</h1>
                         <p class="mb-3">At noein, you step into a quiet space of reflection — a place to slow down, explore your thoughts, and rediscover what feels true for you.</p>
                         <p class="mb-3">It’s a calm space for honest conversation, thoughtful insight, and gentle transformation. Coaching here isn’t about being given answers; it’s about reconnecting with yourself and uncovering what’s already within you.</p>
                         <p class="mb-4">This is coaching that begins with awareness, deepens into understanding, and moves naturally into meaningful change and action.</p>
