--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Meet Alex, the architect and transformative coach behind Noein.">
     <meta name="keywords" content="Alex, Noein, transformative coach, about">
-    <title>noein | get to know me</title>
+    <title>noein | about me</title>
     <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
@@ -51,10 +51,10 @@
                         <a class="nav-link" href="/"><p class="underlineload grey-font-color">Home</p></a>
                     </li>
                     <li class="nav-item grey-font-color">
-                        <a class="nav-link" href="get-to-know-me.html"><p class="underlineload grey-font-color">Get to know me</p></a>
+                        <a class="nav-link" href="about.html"><p class="underlineload grey-font-color">About</p></a>
                     </li>
                     <li class="nav-item grey-font-color">
-                        <a class="nav-link" href="lets-talk.html"><p class="underlineload grey-font-color">Let’s talk</p></a>
+                        <a class="nav-link" href="contact.html"><p class="underlineload grey-font-color">Contact</p></a>
                     </li>
                 </ul>
                 <button class="nav-toggle-btn d-lg-none">
@@ -71,10 +71,11 @@
             <div class="container">
                 <div class="row align-items-center col-spacing-30">
                     <div class="col-lg-6 mb-4 mb-lg-0">
-                        <h1 class="mb-3">Get to know me.</h1>
+                        <h2 class="mb-3">About me.</h2>
                         <p class="mb-3">I’m Alexandra — a Transformative Coach, Architect, and the founder of noein.</p>
                         <p class="mb-3">My journey into coaching began while expanding my own career in architecture. As I grew in that world, I realised the skills I loved most were the human ones: listening, guiding, and helping others make sense of their thoughts. Over time, this became more than an interest — it became a natural path forward, and I trained as a Transformative Coach with the Animas Centre for Coaching.</p>
-                        <p class="mb-3">I have created the space that I once needed myself; a calm place to think, reflect, and reconnect with what feels true.</p>
+                        <p class="mb-3">Noein is the space I once needed myself: a calm place to think, reflect, and reconnect with what feels true.</p>
+                        <h6 class="">A space to think. A space to understand. A space to become.</h6>
 
                           <div class="d-flex flex-wrap align-items-center" style="padding-top: 10px;">
                             <a class="btn accent-btn mr-3 mb-2" href="https://calendly.com/alexandraa-noein/30min">Book Discovery Call</a>
@@ -95,14 +96,13 @@
                 <div class="row col-spacing-30 align-items-start">
                     <div class="col-lg-6">
                         <div class="content-card h-100">
-                            <h3 class="mb-3">Who I work with.</h3>
-                            <p class="mb-3">I work with adults from a wide range of backgrounds — professionals, creatives, people in demanding roles, and those navigating personal transitions.</p>
-                            <p class="mb-0">You don’t need a perfectly shaped goal to begin. Many clients arrive with a sense that something isn’t quite right, or that something needs to shift, even if it’s hard to put into words.</p>
+                            <h4 class="mb-3">Who I work with.</h4>
+                            <p class="mb-3">At <i>noein</i>, I support individuals and professionals who, like I once did, feel a pull toward something more aligned — a desire to reconnect with themselves, gain direction, and build confidence in the choices ahead.</p>
                         </div>
                     </div>
                     <div class="col-lg-6">
                         <div class="content-card h-100">
-                            <h3 class="mb-3">What coaching can help with.</h3>
+                            <h4 class="mb-3">What coaching can help with.</h4>
                             <p class="mb-3">Coaching can support you in many different areas of life and work. Some themes that often show up in sessions include:</p>
                             <ul class="list-checks mb-0">
                                 <li>Gaining clarity on your direction or next steps.</li>
@@ -115,61 +115,55 @@
                             </ul>
                         </div>
                     </div>
-                </div>
-            </div>
-        </section>
 
-        <section class="section-spacer">
-            <div class="container">
-                <div class="row col-spacing-30 align-items-start">
                     <div class="col-lg-6">
                         <div class="content-card h-100">
-                            <h3 class="mb-3">How our sessions work.</h3>
-                            <ul class="list-checks mb-4">
-                                <li>Format – One-to-one coaching.</li>
-                                <li>Session length – 60 minutes.</li>
-                                <li>Location – Online.</li>
-                                <li>Availability – Mostly evenings and weekends.</li>
-                                <li>Where I’m based – London, UK, working with clients worldwide online.</li>
-                            </ul>
-                            <p class="mb-0">We begin with a free 30-minute Discovery Call. It’s a relaxed conversation where we can get to know each other, explore what you’d like to work on, and see whether this approach feels right for you.</p>
-                        </div>
-                    </div>
-                    <div class="col-lg-6">
-                        <div class="content-card h-100">
-                            <h3 class="mb-3">My philosophy.</h3>
+                            <h4 class="mb-3">My philosophy.</h4>
                             <p class="mb-3">Life is often influenced by factors we don’t fully notice. In our busy, demanding, and sometimes stressful lives, it’s easy to lose sight of what truly matters and to find ourselves living in ways that don’t fully reflect our dreams or values.</p>
                             <p class="mb-0">Coaching helps us pause, notice the choices we’ve made, and understand the reasons behind them. It supports us to reconnect with our values and remember where we want our choices to take us, so we can live with greater intention, clarity, and alignment.</p>
                         </div>
                     </div>
+
+                        <div class="col-lg-6">
+                            <div class="content-card h-100">
+                                <h4 class="mb-3">My coaching style.</h4>
+                                <p class="mb-3">My approach is reflective, calm, and centred around awareness. I meet clients where they are, following their pace, their questions, and what naturally arises in the space we create together.</p>
+                                <p class="mb-0">When we understand the thoughts, patterns, and assumptions shaping our lives, we begin to act with greater clarity and intention.</p>
+                            </div>
+                        </div>
+
+
+                            <div class="col-lg-6">
+                                <div class="content-card h-100">
+                                    <h4 class="mb-3">How our sessions work.</h4>
+                                    <ul class="list-checks mb-4">
+                                        <li>Format – One-to-one coaching.</li>
+                                        <li>Session length – 60 minutes.</li>
+                                        <li>Location – Online.</li>
+                                        <li>Availability – Mostly evenings and weekends.</li>
+                                        <li>Where I’m based – London, UK, working with clients worldwide online.</li>
+                                    </ul>
+                                    <p class="mb-0">We begin with a free 30-minute Discovery Call. It’s a relaxed conversation where we can get to know each other, explore what you’d like to work on, and see whether this approach feels right for you.</p>
+                                </div>
+                            </div>
+
+
+                                <div class="col-lg-6">
+                                    <div class="content-card h-100">
+                                        <h4 class="mb-3">My qualifications.</h4>
+                                        <ul class="list-checks mb-0">
+                                            <li>Accredited Diploma in Transformative Coaching</li>
+                                            <li>BA (Hons) Degree in Architecture (Part 1)</li>
+                                            <li>Pg Diploma in Architecture (Part 2)</li>
+                                            <li>RIBA Professional Practice Qualification (Part 3)</li>
+                                        </ul>
+                                    </div>
+                                </div>
+
                 </div>
             </div>
         </section>
 
-        <section class="section-spacer">
-            <div class="container">
-                <div class="row col-spacing-30 align-items-start">
-                    <div class="col-lg-6">
-                        <div class="content-card h-100">
-                            <h3 class="mb-3">My coaching style.</h3>
-                            <p class="mb-3">My approach is reflective, calm, and centred around awareness. I meet clients where they are, following their pace, their questions, and what naturally arises in the space we create together.</p>
-                            <p class="mb-0">When we understand the thoughts, patterns, and assumptions shaping our lives, we begin to act with greater clarity and intention.</p>
-                        </div>
-                    </div>
-                    <div class="col-lg-6">
-                        <div class="content-card h-100">
-                            <h3 class="mb-3">My qualifications.</h3>
-                            <ul class="list-checks mb-0">
-                                <li>Accredited Diploma in Transformative Coaching</li>
-                                <li>BA (Hons) Degree in Architecture (Part 1)</li>
-                                <li>Pg Diploma in Architecture (Part 2)</li>
-                                <li>RIBA Professional Practice Qualification (Part 3)</li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
 
         <section class="section-spacer">
             <div class="container">
@@ -179,7 +173,7 @@
                         <div class="content-card h-100">
                             <h3 class="mb-3">Ready to begin?</h3>
                             <p class="mb-4">If you’re ready for a calm, thoughtful space to reconnect with yourself, I’d love to hear from you.</p>
-</br>
+
                             <a class="btn accent-btn mr-3 mb-2" href="https://calendly.com/alexandraa-noein/30min">Book a discovery call</a>
                             <a class="btn btn-outline-dark mr-3 mb-2" href="mailto:alex@noein.co.uk">Send an email</a>
                         </div>
