--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Explore coaching with noein — pricing, sessions, and how to book.">
     <meta name="keywords" content="coaching, discovery call, pricing, contact, Noein">
-    <title>noein | let’s talk</title>
+    <title>noein | contact</title>
     <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
@@ -51,10 +51,10 @@
                         <a class="nav-link" href="/"><p class="underlineload grey-font-color">Home</p></a>
                     </li>
                     <li class="nav-item grey-font-color">
-                        <a class="nav-link" href="get-to-know-me.html"><p class="underlineload grey-font-color">Get to know me</p></a>
+                        <a class="nav-link" href="about.html"><p class="underlineload grey-font-color">About</p></a>
                     </li>
                     <li class="nav-item grey-font-color">
-                        <a class="nav-link" href="lets-talk.html"><p class="underlineload grey-font-color">Let’s talk</p></a>
+                        <a class="nav-link" href="contact.html"><p class="underlineload grey-font-color">Contact</p></a>
                     </li>
                 </ul>
                 <button class="nav-toggle-btn d-lg-none">
@@ -71,8 +71,8 @@
           <div class="container">
               <div class="row align-items-center">
                   <div class="col-lg-7 mb-4 mb-lg-0">
-                    <h1 class="mb-3">Let’s talk.</h1>
-                    <p class="mb-3">I offer one-to-one, 60-minute coaching sessions online, creating a calm and supportive space for you to reflect and explore what matters most.</p>
+                    <h2 class="mb-3">Begin your coaching journey.</h2>
+                    <p class="mb-3">I offer one-to-one, 60-minute coaching sessions online, creating a calm, supportive, and collaborative space for you to reflect and explore what matters most.</p>
                     <p class="mb-3">If you’re curious about how coaching could support you, you’re invited to book a free 30-minute Discovery Call. It’s a relaxed conversation where we can get to know each other and see whether the approach feels right for you.</p>
                     <p class="mb-3">Together we’ll reconnect with your values, clarify your direction, and help you act with intention.</p>
                     </div>
@@ -101,7 +101,7 @@
                 <div class="row col-spacing-30 align-items-start">
                     <div class="col-lg-12">
                         <div class="content-card h-100">
-                            <h3 class="mb-3">Get in touch.</h3>
+                            <h4 class="mb-3">Get in touch.</h4>
                             <p class="mb-3">I’d love to hear from you. Whether you’re curious about coaching, have a question, or want to book an introductory call, please reach out.</p>
                             <p class="mb-4">Email: <a href="mailto:alex@noein.co.uk">alex@noein.co.uk</a><br>Sessions: Online via Microsoft Teams — mainly evenings &amp; weekends.<br>I work with clients worldwide online.</p>
                             <a class="btn accent-btn mr-3 mb-2" href="https://calendly.com/alexandraa-noein/30min">Schedule on Calendly</a>
