--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
                         <a class="nav-link" href="/"><p class="underlineload grey-font-color">Home</p></a>
                     </li>
                     <li class="nav-item grey-font-color">
-                        <a class="nav-link" href="get-to-know-me.html"><p class="underlineload grey-font-color">Get to know me</p></a>
+                        <a class="nav-link" href="about.html"><p class="underlineload grey-font-color">About</p></a>
                     </li>
                     <li class="nav-item grey-font-color">
-                        <a class="nav-link" href="lets-talk.html"><p class="underlineload grey-font-color">Let’s talk</p></a>
+                        <a class="nav-link" href="contact.html"><p class="underlineload grey-font-color">Contact</p></a>
                     </li>
                 </ul>
                 <button class="nav-toggle-btn d-lg-none">
@@ -67,101 +67,124 @@
     <div class="navbar-placeholder"></div>
 
     <main class="flex-fill">
-        <section class="section-spacer section-hero-intro">
-            <div class="container">
-                <div class="row align-items-center">
-                    <div class="col-lg-7 mb-4 mb-lg-0">
-                        <h1 class="mb-3">Coaching for inner clarity.</h1>
-                        <p class="mb-3">At noein, you step into a quiet space of reflection — a place to slow down, explore your thoughts, and rediscover what feels true for you.</p>
-                        <p class="mb-3">It’s a calm space for honest conversation, thoughtful insight, and gentle transformation. Coaching here isn’t about being given answers; it’s about reconnecting with yourself and uncovering what’s already within you.</p>
-                        <p class="mb-4">This is coaching that begins with awareness, deepens into understanding, and moves naturally into meaningful change and action.</p>
 
-                    </div>
-                    <div class="col-lg-5">
-                        <div class="content-card h-100">
-                            <h4 class="mb-3">What this space holds</h4>
-                            <ul class="list-checks mb-0">
-                                <li>Honest reflection without pressure.</li>
-                                <li>Insight that feels gentle and grounded.</li>
-                                <li>Clarity that turns into thoughtful action.</li>
-                                <li>A partner who meets you where you are.</li>
-                            </ul>
-                          </br>
-                            <div class="d-flex flex-wrap align-items-center">
-                                <a class="btn accent-btn mr-3 mb-2" href="get-to-know-me.html">Explore coaching</a>
-                                <a class="btn btn-outline-dark mr-3 mb-2" href="lets-talk.html">Let’s talk</a>
+              <section class="section-spacer section-hero-intro">
+                  <div class="container">
+                      <div class="row col-spacing-30 align-items-start">
+                        <div class="col-lg-12">
+                            <div class="content-card content-card--translucent h-100">
+                              <h2 class="mb-0 text-center">A space to <i class="blue-font-color">think</i>.</h2>
                             </div>
-
                         </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-                <section class="section-spacer">
-                    <div class="container">
-                        <div class="row col-spacing-30 align-items-start">
-                          <div class="col-lg-12">
-                              <div class="content-card content-card--translucent h-100">
-                                <h1 class="mb-0 text-center">A space to <i>think.</i></h1>
-                              </div>
-                          </div>
-                </div>
               </div>
-        </section>
+            </div>
+      </section>
+
+      <section class="section-spacer">
+          <div class="container">
+              <div class="row col-spacing-30 align-items-start">
+                  <div class="col-lg-12">
+                      <div class="content-card h-100">
+                          <h3 class="mb-3">Coaching for inner clarity.</h3>
+                          <p class="mb-3">At noein, you step into a quiet space of reflection — a place to slow down, explore your thoughts, and rediscover what feels true for you.</p>
+                          <p class="mb-3">It’s a calm space for honest conversation, thoughtful insight, and gentle transformation. Coaching here isn’t about being given answers; it’s about reconnecting with yourself and uncovering what’s already within you.</p>
+                          <p class="mb-4">This is coaching that begins with awareness, deepens into understanding, and moves naturally into meaningful change and action.</p>
+                          </div>
+                  </div>
+              </div>
+          </div>
+      </section>
+
+              <section class="section-spacer">
+                  <div class="container">
+                      <div class="row col-spacing-30 align-items-start">
+                        <div class="col-lg-12">
+                            <div class="content-card content-card--translucent h-100">
+                              <h2 class="mb-0 text-center">A space to <i class="blue-font-color">understand</i>.</h2>
+                            </div>
+                        </div>
+              </div>
+            </div>
+      </section>
 
         <section class="section-spacer">
             <div class="container">
                 <div class="row col-spacing-30 align-items-start">
-                    <div class="col-lg-6">
+                    <div class="col-lg-12">
                         <div class="content-card h-100">
                             <h3 class="mb-3">A calm space for honest conversation.</h3>
                             <p class="mb-3">You’re invited to slow down and reconnect with yourself; this is a place to notice what’s happening inside, understand the choices you’ve made, and remember where you want those choices to take you.</p>
                             <p class="mb-3">Coaching here is not about supplying quick fixes. It’s about helping you uncover the clarity, confidence, and direction that are already within you.</p>
                         </div>
                     </div>
-                    <div class="col-lg-6">
-                        <div class="content-card h-100">
-                            <h3 class="mb-3">How we work, together.</h3>
-                            <ul class="list-checks mb-4">
-                                <li>Begin with awareness, deepen into understanding, and move into meaningful change.</li>
-                                <li>Explore your thoughts, patterns, and assumptions at a pace that feels right for you.</li>
-                                <li>Find alignment between who you are and what you do through reflective conversation.</li>
-                                <li>Leave each session with grounded insight and a calmer next step.</li>
-                            </ul>
-                            <a class="btn btn-outline-dark" href="lets-talk.html">See how sessions work</a>
-                        </div>
-                    </div>
                 </div>
             </div>
         </section>
+
 
                 <section class="section-spacer">
                     <div class="container">
                         <div class="row col-spacing-30 align-items-start">
                           <div class="col-lg-12">
                               <div class="content-card content-card--translucent h-100">
-                                <h1 class="mb-0 text-center">A space to <i>understand.</i></h1>
+                                <h2 class="mb-0 text-center">A space to <i class="blue-font-color">become</i>.</h2>
                               </div>
                           </div>
                 </div>
               </div>
         </section>
 
+
+          <section class="section-spacer">
+              <div class="container">
+                  <div class="row col-spacing-30 align-items-start">
+                      <div class="col-lg-12">
+                          <div class="content-card h-100">
+                              <h3 class="mb-3">Be authentically, you.</h3>
+                              <p class="mb-3">At noein, we support a process where self-awareness opens the door to deeper understanding - and from that clarity, choices and changes arise that feel aligned, natural, and authentically.</p>
+                          </div>
+                      </div>
+                  </div>
+              </div>
+          </section>
+
         <section class="section-spacer">
             <div class="container">
-                <div class="row align-items-stretch col-spacing-30 equal-height-row">
-                    <div class="col-lg-6 order-lg-2 mb-4 mb-lg-0">
+                <div class="row col-spacing-30 align-items-start">
+                    <div class="col-lg-4 order-lg-3 mb-4 mb-lg-0">
                         <div class="content-card h-100">
-                            <h3 class="mb-3">Why noein?</h3>
-                            <p class="mb-3">The name is derived from the ancient Greek word νοεῖν — to perceive with the mind. It points to the inner clarity that appears when thinking settles and insight becomes visible.</p>
-                            <p class="mb-3">This practice grew from Alexandra’s own experience of choosing a path that honoured her values. Noein is a calm space to reflect, reconnect, and act with intention.</p>
-                            <p class="mb-0"><strong>Transformative Coach and Architect</strong> – practical structure meets thoughtful exploration, to help you see what’s true and move forward with confidence.</p>
-                        </div>
-                    </div>
-                    <div class="col-lg-6 order-lg-1 mb-4 mb-lg-0">
+                            <h4 class="mb-3">How we work, together.</h4>
+                            <ul class="list-checks mb-4">
+                                <li>Begin with awareness, deepen into understanding, and move into meaningful change.</li>
+                                <li>Explore your thoughts, patterns, and assumptions at a pace that feels right for you.</li>
+                                <li>Find alignment between who you are and what you do through reflective conversation.</li>
+                                <li>Leave each session with grounded insight and a calmer next step.</li>
+                            </ul>
+                            <!-- a class="btn btn-outline-dark" href="contact.html">See how sessions work</a -->
+                        </div></div>
+
+                        <div class="col-lg-4 order-lg-2 mb-4 mb-lg-0">
+                                      <div class="content-card h-100">
+                                          <h4 class="mb-3">What this space holds.</h4>
+                                          <ul class="list-checks mb-0">
+                                              <li>Honest reflection without pressure.</li>
+                                              <li>Insight that feels gentle and grounded.</li>
+                                              <li>Clarity that turns into thoughtful action.</li>
+                                              <li>A partner who meets you where you are.</li>
+                                          </ul>
+                                        </br>
+                                          <div class="d-flex flex-wrap align-items-center">
+                                              <!-- a class="btn accent-btn mr-3 mb-2" href="about.html">Explore coaching</a -->
+                                              <!-- a class="btn btn-outline-dark mr-3 mb-2" href="contact.html">Let’s talk</a -->
+                                          </div>
+
+                                      </div>
+                                  </div>
+
+
+                    <div class="col-lg-4 order-lg-1 mb-4 mb-lg-0">
                         <div class="content-card h-100">
-                            <h3 class="mb-3">Who this space is for.</h3>
+                            <h4 class="mb-3">Who this space is for.</h4>
                             <ul class="list-checks mb-0">
                                 <li>Sensing a pull toward something more aligned in life or work.</li>
                                 <li>Wanting more clarity about your direction or next steps.</li>
@@ -174,18 +197,6 @@
             </div>
         </section>
 
-                <section class="section-spacer">
-                    <div class="container">
-                        <div class="row col-spacing-30 align-items-start">
-                          <div class="col-lg-12">
-                              <div class="content-card content-card--translucent h-100">
-                                <h1 class="mb-0 text-center">A space to <i>become.</i></h1>
-                              </div>
-                          </div>
-                </div>
-              </div>
-        </section>
-
         <section class="section-spacer">
             <div class="container">
                 <div class="content-card">
@@ -194,7 +205,7 @@
                             <h3 class="mb-0">What people say.</h3>
                         </div>
                         <div class="col-lg-4 text-lg-right mt-3 mt-lg-0">
-                            <a class="btn btn-outline-dark" href="lets-talk.html">Book a discovery call</a>
+                            <a class="btn btn-outline-dark" href="contact.html">Book a discovery call</a>
                         </div>
                     </div>
                     <div class="row">
@@ -247,7 +258,7 @@
                 <div class="content-card text-center">
                     <h3 class="mb-3">If noein feels like the right space, let’s begin with a short conversation.</h3>
                   </br>
-                    <a class="btn accent-btn mr-3 mb-2" href="lets-talk.html">Explore coaching</a>
+                    <a class="btn accent-btn mr-3 mb-2" href="contact.html">Explore coaching</a>
                     <a class="btn btn-outline-dark mr-3 mb-2" href="mailto:alex@noein.co.uk">Send an email</a>
                 </div>
             </div>
