--- a/about.html
+++ b/about.html
@@ -87,52 +87,56 @@
 
     <main class="flex-fill">
         <section class="section-spacer">
-            <div class="container">
-                <div class="row align-items-center col-spacing-30">
-                    <div class="col-lg-7 mb-4 mb-lg-0">
-                        <h1 class="mb-3">I'm <i class="blue-font-color">Alexandra</i>.</h1>
-                        <h2 class="mb-3">A Transformative Coach, Architect, and the founder of noein.</h2>
-                        <p class="mb-3">My journey into coaching began while expanding my own career in architecture. As I grew in that world, I realised the skills that stood out for me were the human ones: listening, guiding, and helping others make sense of their thoughts.</p>
-                        <p class="mb-3">For a long time, I felt pressure to find my place in architecture in a way that felt clearly defined and technical. It was only when I accepted that my interests might take a different form — and that they were still valid, still mine, and could be used meaningfully — that something shifted. With that acceptance came a sense of lightness and confidence, and a release from the stress of trying to force myself into a specialty that didn’t truly reflect who I am.</p>
-                        <p class="mb-3">I began to see that what I had to offer the practice I worked in was exactly this perspective. I introduced a focus on personal development, helping to cultivate a growth culture through mentoring and coaching within the office.</p>
-                        <p class="mb-3">Over time, this understanding became more than an interest; it became a natural path forward. I trained as a Transformative Coach with the Animas Centre for Coaching, realising that I didn’t have to choose between these two sides of myself — I could bring them together.</p>
-                        <p class="mb-3">Noein is the space I once needed myself: a calm place to explore, reflect, and reconnect with what feels true to myself.</p></br>
-                        <h3 class="">A space to think. A space to understand. A space to become.</h3></br></br>
+  <div class="container">
+    <div class="row align-items-stretch col-spacing-30">
 
-                          <!-- div class="d-flex flex-wrap align-items-center" style="padding-top: 10px;">
-                            <a class="btn accent-btn mr-3 mb-2" href="https://calendly.com/alexandraa-noein/30min">Book Discovery Call</a>
-                            <a class="btn btn-outline-dark mb-2" href="mailto:alex@noein.co.uk">Email Me</a>
-                        </div -->
-                    </div>
-                    <div class="col-lg-5 mb-4 mb-lg-0 text-center">
+      <!-- LEFT: TEXT -->
+      <div class="col-lg-7 mb-4 mb-lg-0">
+        <h1 class="mb-3">I'm <i class="blue-font-color">Alexandra</i>.</h1>
+        <h2 class="mb-3">A Transformative Coach, Architect, and the founder of noein.</h2>
 
-                            <div class="about-image-stack">
+        <p class="mb-3">My journey into coaching began while expanding my own career in architecture. As I grew in that world, I realised the skills that stood out for me were the human ones: listening, guiding, and helping others make sense of their thoughts.</p>
 
-  <!-- Portrait -->
-  <img 
-    src="assets/images/Alex.jpeg" 
-    alt="Portrait of Alexandra" 
-    class="about-image about-portrait"
-  >
+        <p class="mb-3">For a long time, I felt pressure to find my place in architecture in a way that felt clearly defined and technical. It was only when I accepted that my interests might take a different form — and that they were still valid, still mine, and could be used meaningfully — that something shifted. With that acceptance came a sense of lightness and confidence, and a release from the stress of trying to force myself into a specialty that didn’t truly reflect who I am.</p>
 
-  <!-- Workplace photo -->
-  <img 
-    src="assets/images/workplace.jpg"
-    alt="Alexandra introducing coaching in the workplace" 
-    class="about-image about-work"
-  >
+        <p class="mb-3">I began to see that what I had to offer the practice I worked in was exactly this perspective. I introduced a focus on personal development, helping to cultivate a growth culture through mentoring and coaching within the office.</p>
 
-  <p class="about-caption">
-    Introducing coaching in my workplace — nurturing a culture where people can learn and grow.
-  </p>
+        <p class="mb-3">Over time, this understanding became more than an interest; it became a natural path forward. I trained as a Transformative Coach with the Animas Centre for Coaching, realising that I didn’t have to choose between these two sides of myself — I could bring them together.</p>
 
-</div>
+        <p class="mb-3">Noein is the space I once needed myself: a calm place to explore, reflect, and reconnect with what feels true to myself.</p>
 
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
+        <br>
+        <h3>A space to think. A space to understand. A space to become.</h3>
+        <br><br>
+      </div>
+
+      <!-- RIGHT: IMAGES + CAPTION (BOTTOM-ALIGNED) -->
+      <div class="col-lg-5 mb-4 mb-lg-0 text-center about-images-col">
+
+        <div class="about-image-stack">
+          <img
+            src="assets/images/Alex.jpeg"
+            alt="Portrait of Alexandra"
+            class="about-image about-portrait"
+          >
+
+          <img
+            src="assets/images/workplace.jpg"
+            alt="Alexandra introducing coaching in the workplace"
+            class="about-image about-work"
+          >
+        </div>
+
+        <p class="about-caption">
+          Introducing coaching in my workplace — nurturing a culture where people can learn and grow.
+        </p>
+
+      </div>
+
+    </div>
+  </div>
+</section>
+
 
         <section class="section-spacer">
             <div class="container">
