--- a/services.html
+++ b/services.html
@@ -58,9 +58,9 @@ It’s a space to reconnect with who you are, honour what matters to you, and mo
 <!-- SERVICES GRID -->
 <section class="section-spacer">
     <div class="container">
-        <div class="row col-spacing-30 align-items-start">
+<div class="row col-spacing-30 align-items-stretch equal-height-row">
 
-            <div class="col-lg-6">
+            <div class="col-lg-6 d-flex">
                 <div class="content-card h-100">
                     <h2 class="mb-3">Who I work with.</h2>
                     <p>
@@ -69,7 +69,7 @@ It’s a space to reconnect with who you are, honour what matters to you, and mo
                 </div>
             </div>
 
-            <div class="col-lg-6">
+            <div class="col-lg-6 d-flex">
                 <div class="content-card h-100">
                     <h2 class="mb-3">What coaching can help with.</h2>
                     <ul class="list-checks mb-0">
@@ -84,7 +84,7 @@ It’s a space to reconnect with who you are, honour what matters to you, and mo
                 </div>
             </div>
 
-            <div class="col-lg-6">
+            <div class="col-lg-6 d-flex">
                 <div class="content-card h-100">
                     <h2 class="mb-3">My coaching style.</h2>
 
@@ -98,7 +98,7 @@ It’s a space to reconnect with who you are, honour what matters to you, and mo
                 </div>
             </div>
             
-            <div class="col-lg-6">
+            <div class="col-lg-6 d-flex">
                 <div class="content-card h-100">
                     <h2 class="mb-3">How our sessions work.</h2>
             <ul class="list-checks mb-3">
